[package]
name = "corundum"
version = "0.4.1"
authors = ["Morteza Hoseinzadeh <mhoseinzadeh@cs.ucsd.edu>", "Steven Swanson <swanson@cs.ucsd.edu>"]
edition = "2021"
license = "MIT"
description = "Persistent Programming Library"
documentation = "https://nvsl.github.io/Corundum/"
repository = "https://github.com/NVSL/Corundum"
readme = "README.md"
keywords = ["pmem", "persistent", "memory", "pmdk"]
categories = ["development-tools", "memory-management", "hardware-support"]

[workspace]
members = ["crndm_derive"]

[features]
verbose = []
stat_footprint = []
stat_perf = []
stat_log = []
stat_print_flushes = []
check_access_violation = []
check_allocator_cyclic_links = []
check_double_free = []
pin_journals = []
replace_with_log = []
use_clflushopt = []
use_clwb = []
use_ntstore = []
use_msync = ["libc"]
use_pspd = []
use_vspd = []
no_persist = []
no_log_rc = []
no_flush_alloc = []
no_flush_updates = []
no_dyn_borrow_checking = []
pthreads = ["libc"]
cbindings = []
default = ["cbindings"]

[dependencies]
memmap = "0.7.0"
term-painter = "0.3.0"
libc = { version = "0.2.147", optional = true }
impl-trait-for-tuples = "0.2.2"
crndm_derive = "0.1.1"
num_cpus = "1.16.0"
rand = "0.8.5"

[dev-dependencies]
regex = "1.9.1"
num = "0.4.1"
