[package]
name = "corundum"
version = "0.4.1"
authors = ["Morteza Hoseinzadeh <mhoseinzadeh@cs.ucsd.edu>", "Steven Swanson <swanson@cs.ucsd.edu>"]
edition = "2021"
license = "MIT"
description = "Persistent Programming Library"
documentation = "https://nvsl.github.io/Corundum/"
repository = "https://github.com/NVSL/Corundum"
readme = "README.md"
keywords = ["pmem", "persistent", "memory", "pmdk"]
categories = ["development-tools", "memory-management", "hardware-support"]

[workspace]
members = ["crndm_derive"]

[features]
verbose = ["term-painter"]
stat_footprint = []
stat_perf = []
stat_log = []
stat_print_flushes = []
check_access_violation = []
check_allocator_cyclic_links = []
check_double_free = []
pin_journals = []
replace_with_log = []
use_clflushopt = []
use_clwb = []
use_ntstore = []
use_msync = ["libc"]
use_pspd = []
use_vspd = []
no_persist = []
no_log_rc = []
no_flush_alloc = []
no_flush_updates = []
no_dyn_borrow_checking = []
pthreads = ["libc"]
cbindings = []
derive = ["crndm_derive"]
default = ["std", "cbindings"]
std = ["memmap", "num_cpus", "rand"]
no_std = ["spin", "siphasher"]

[dependencies]
memmap = { version = "0.7.0", optional = true }
term-painter = { version = "0.3.0", optional = true }
libc = { version = "0.2.147", optional = true }
impl-trait-for-tuples = "0.2.2"
crndm_derive = { version = "0.1.1", optional = true }
num_cpus = { version = "1.16.0", optional = true }
rand = { version = "0.8.5", optional = true }
spin = { version = "0.5.2", optional = true }
siphasher = { version = "0.3", optional = true }

[dev-dependencies]
regex = "1.9.1"
num = "0.4.1"
