[package]
name = "crndm_derive"
version = "0.1.1"
authors = ["Morteza Hoseinzadeh"]
edition = "2021"
license = "MIT"
description = "Persistent Programming Library Procedural Macros"
documentation = "https://nvsl.github.io/Corundum/"
repository = "https://github.com/NVSL/Corundum"
keywords = ["pmem", "persistent", "memory", "pmdk"]
categories = ["development-tools", "memory-management", "hardware-support"]

[lib]
name = "crndm_derive"
proc-macro = true

[dependencies]
quote = "1.0.32"
regex = "1.9.1"
proc-macro-error = "1.0.4"
cbindgen = "0.24.5"

[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full", "visit-mut", "parsing"]

[dependencies.proc-macro2]
version = "1.0.66"
features = ["span-locations"]
